k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: floweryroad
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    # rewrite 하면 full path가 전달되지 않으므로 주의
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: auth
              port:
                number: 80
